Filed up website with relevant information

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>Welcome!</strong> My name is Shawki Kased and im a Software Engineer with a love for Video Games. Im always excited to learn a new language and i love building projects to sharpen my skills.</p>
 							<span class="image main"><img src="images/Shawki_Kased_s.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -49,16 +49,17 @@
 							<h2>Skills</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong></strong> My skillset includes but not limited to:</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-cog"></li>
-								<li class="icon solid fa-cog"></li>
-								<li class="icon solid fa-cog"></li>
-								<li class="icon solid fa-cog"></li>
-								<li class="icon solid fa-cog"></li>
-								<li class="icon solid fa-cog"></li>
+								<li class="icon solid fa-cog">Ruby on Rails</li>
+								<li class="icon solid fa-cog">JavaScript</li>
+								<li class="icon solid fa-cog">React.js</li>
+								<li class="icon solid fa-cog">Node.js</li>
+								<li class="icon solid fa-cog">Redux</li>
+								<li class="icon solid fa-cog">MongoDB</li>
+								<li class="icon solid fa-cog">Express</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>I love adapting to different things, and it's exciting to learn any new language should it bring itself to my work!</p>
 						</div>
 					</section>
 
@@ -68,50 +69,63 @@
 							<h2>Projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>My pride and joy!</strong>Here are some of my works that showcases just a sample of what i could do, and counting!</p>
 
 							<!-- Section -->
 								<section>
 									<header>
 										<h3>BrainFlash</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<p>Studying website inspired by Brainscape where users can create flashcards for easy access studying.
+											Constructed dynamic objects and components that interact for easier user interface to organize your flashcards by cards and decks.
+											Implemented an easy to use modal that connects with the state and id to create new decks and cards on the spot without refreshing.
+											<a href="https://brain-flash.herokuapp.com/">You Can Try it Out Here!</a>
+										</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="images/BrainFlash2.png" class="landscape"><img src="images/BrainFlash2.png" alt="" /></a>
+											<!-- <a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a> -->
+											<!-- <a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a> -->
+											<a href="images/BrainFlash.png" class="landscape"><img src="images/BrainFlash.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3>CrimeWatch</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<p>A web application that allows Samaritans to report local crimes/incidents in their neighborhood.
+										Reports incidents very easily and seamlessly with an on the spot modal.
+										Produces spots on a google maps API to pinpoint the location of the report.
+									    </p>
 									</header>
 									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										</div>
+										<div class="gallery"> -->
+											<!-- <a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a> -->
+											<!-- <a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a> -->
+											<!-- <a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a> -->
+										<!-- </div>
 									</div>
-								</section>
+								</section> -->
 
 							<!-- Section -->
 								<section>
 									<header>
 										<h3>StoryQuest</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<p>JavaScript text adventure game based around selection boxes with multiple paths and scenarios.
+										Executed a smooth and instant choice box that shifts around scenarios instantly with each button being attached to a
+										state and object for easy execution.
+										Defined an array containing objects of multiple story scenarios that are easily connected with Id’s and State that
+										carries over on refreshes and closes.
+										<a href="ShawkiKased.github.io/StoryQuest">You Can Play it Here!</a>
+									    </p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<!-- <a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a> -->
+											<!-- <a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a> -->
+											<a href="images/StoryQuest.png" class="landscape"><img src="images/StoryQuest.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -120,7 +134,7 @@
 					</section>
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
 						</header>
@@ -131,7 +145,7 @@
 								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Elements -->
 				<!--
@@ -406,7 +420,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						<header>
 							<h2>Get in touch</h2>
 						</header>
-						<div class="content">
+						<!-- <div class="content">
 							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
 							<form>
 								<div class="fields">
@@ -424,7 +438,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<li><input type="submit" value="Send Message" class="button primary" /></li>
 								</ul>
 							</form>
-						</div>
+						</div> -->
 						<footer>
 							<ul class="items">
 								<li>
