--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/home-bg.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/kingdom.png" alt="" /></span>
 						</div>
 					</section>
 
