--- a/index.html
+++ b/index.html
@@ -91,34 +91,17 @@
 									</div>
 								</section>
 
-							<!-- Section -->
-								<!-- <section>
-									<header>
-										<h3>CrimeWatch</h3>
-										<p>A web application that allows Samaritans to report local crimes/incidents in their neighborhood.
-										Reports incidents very easily and seamlessly with an on the spot modal.
-										Produces spots on a google maps API to pinpoint the location of the report.
-									    </p>
-									</header>
-									<div class="content">
-										<div class="gallery"> -->
-											<!-- <a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a> -->
-											<!-- <a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a> -->
-											<!-- <a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a> -->
-										<!-- </div>
-									</div>
-								</section> -->
-
+								
 							<!-- Section -->
 								<section>
 									<header>
 										<h3>StoryQuest</h3>
 										<p>JavaScript text adventure game based around selection boxes with multiple paths and scenarios.
-										Executed a smooth and instant choice box that shifts around scenarios instantly with each button being attached to a
-										state and object for easy execution.
-										Defined an array containing objects of multiple story scenarios that are easily connected with Id’s and State that
-										carries over on refreshes and closes.
-										<a href="ShawkiKased.github.io/StoryQuest">You Can Play it Here!</a>
+											Executed a smooth and instant choice box that shifts around scenarios instantly with each button being attached to a
+											state and object for easy execution.
+											Defined an array containing objects of multiple story scenarios that are easily connected with Id’s and State that
+											carries over on refreshes and closes.
+											<a href="ShawkiKased.github.io/StoryQuest">You Can Play it Here!</a>
 									    </p>
 									</header>
 									<div class="content">
@@ -129,9 +112,28 @@
 										</div>
 									</div>
 								</section>
-
-						</div>
-					</section>
+								
+							<!-- Section -->
+								<section>
+									<header>
+										<h3>CrimeWatch</h3>
+										<p>A web application that allows Samaritans to report local crimes/incidents in their neighborhood.
+										Reports incidents very easily and seamlessly with an on the spot modal.
+										Produces spots on a google maps API to pinpoint the location of the report.
+										Group Project with Chris Garthright and Mahmud Ahmed.
+										<a href="https://crime-watch.herokuapp.com/#/">You Can Try it Out Here!</a>
+										</p>
+									</header>
+									<div class="content">
+										<div class="gallery"> -->
+											<a href="images/Crimewatch1.png" class="landscape"><img src="images/crimewatch1.png" alt="" /></a>
+											<!-- <a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a> -->
+											<a href="images/Crimewatch2.png"><img src="images/Crimewatch2.png" alt="" /></a>
+										</div>
+									</div>
+								</section>
+							</div>
+						</section>
 
 				<!-- Section -->
 					<!-- <section>
