Fixed an image issue

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 										</p>
 									</header>
 									<div class="content">
-										<div class="gallery"> -->
+										<div class="gallery">
 											<a href="images/Crimewatch1.png" class="landscape"><img src="images/crimewatch1.png" alt="" /></a>
+											<a href="images/Crimewatch2.png" class="landscape"><img src="images/crimewatch2.png" alt="" /></a>
 											<!-- <a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a> -->
-											<a href="images/Crimewatch2.png"><img src="images/Crimewatch2.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
