--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/Crimewatch1.png" class="landscape"><img src="images/crimewatch1.png" alt="" /></a>
-											<a href="images/Crimewatch2.png" class="landscape"><img src="images/crimewatch2.png" alt="" /></a>
-											<!-- <a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a> -->
+											<a href="images/Crimewatch1.png" class="landscape"><img src="images/Crimewatch1.png" alt="" /></a>
+											<!-- <a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a> -->
+											<!-- <a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a> -->
+											<a href="images/Crimewatch2.png" class="landscape"><img src="images/Crimewatch2.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
