--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 										<p>Studying website inspired by Brainscape where users can create flashcards for easy access studying.
 											Constructed dynamic objects and components that interact for easier user interface to organize your flashcards by cards and decks.
 											Implemented an easy to use modal that connects with the state and id to create new decks and cards on the spot without refreshing.
-											<a href="https://brain-flash.herokuapp.com/">You Can Try it Out Here!</a>
+											<a href="https://brain-flash.herokuapp.com/" target="_blank">You Can Try it Out Here!</a>
 										</p>
 									</header>
 									<div class="content">
@@ -267,7 +267,7 @@
 											state and object for easy execution.
 											Defined an array containing objects of multiple story scenarios that are easily connected with Id’s and State that
 											carries over on refreshes and closes.
-											<a href="ShawkiKased.github.io/StoryQuest">You Can Play it Here!</a>
+											<a href="https://shawkikased.github.io/StoryQuest/" target="_blank" >You Can Play it Here!</a>
 									    </p>
 									</header>
 									<div class="content">
@@ -287,7 +287,7 @@
 										Reports incidents very easily and seamlessly with an on the spot modal.
 										Produces spots on a google maps API to pinpoint the location of the report.
 										Group Project with Chris Garthright and Mahmud Ahmed.
-										<a href="https://crime-watch.herokuapp.com/#/">You Can Try it Out Here!</a>
+										<a href="https://crime-watch.herokuapp.com/#/" target="_blank">You Can Try it Out Here!</a>
 										</p>
 									</header>
 									<div class="content">
@@ -625,9 +625,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/shawki-kased-1488171a2/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://github.com/ShawkiKased" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="https://angel.co/shawki-kased" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+										<li><a href="https://www.linkedin.com/in/shawki-kased-1488171a2/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/ShawkiKased" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+										<li><a href="https://angel.co/shawki-kased" class="icon brands fa-angellist" target="_blank"><span class="label">AngelList</span></a></li>
 									</ul>
 								</li>
 							</ul>
