Fixed resume link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content" style="display:flex; justify-content:space-between;">
-							<p style="max-width:50%;"><strong>Welcome!</strong> My name is Shawki Kased and Im a Software Engineer with a love for Video Games. Im always excited to learn a new language and I love building projects to sharpen my skills.<a href="Shawki_Kased_Resume (1).pdf" target="_blank" download>Check out my Resume!</a></p>
+							<p style="max-width:50%;"><strong>Welcome!</strong> My name is Shawki Kased and Im a Software Engineer with a love for Video Games. Im always excited to learn a new language and I love building projects to sharpen my skills.<a href="Shawki_Kased_Resume (1).pdf" target="_blank">Check out my Resume!</a></p>
 							<span class="image main" style="padding-left:38px;"><img src="images/Shawki_Kased_s.jpg" alt="" /></span>
 						</div>
 					</section>
