README and rep links

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 											Constructed dynamic objects and components that interact for easier user interface to organize your flashcards by cards and decks.
 											Implemented an easy to use modal that connects with the state and id to create new decks and cards on the spot without refreshing.
 											<a href="https://brain-flash.herokuapp.com/" target="_blank">You Can Try it Out Here!</a>
+											<a href="https://github.com/ShawkiKased/BrainFlash" target="_blank">Visit the Repo Here!</a>
 										</p>
 									</header>
 									<div class="content">
@@ -236,6 +237,7 @@
 											Defined an array containing objects of multiple story scenarios that are easily connected with Id’s and State that
 											carries over on refreshes and closes.
 											<a href="https://shawkikased.github.io/StoryQuest/" target="_blank" >You Can Play it Here!</a>
+											<a href="https://github.com/ShawkiKased/StoryQuest" target="_blank">Visit the Repo Here!</a>
 									    </p>
 									</header>
 									<div class="content">
@@ -256,6 +258,7 @@
 										Produces spots on a google maps API to pinpoint the location of the report.
 										Group Project with Chris Garthright and Mahmud Ahmed.
 										<a href="https://crime-watch.herokuapp.com/#/" target="_blank">You Can Try it Out Here!</a>
+										<a href="https://github.com/MahmudAhmed/CrimeWatch" target="_blank">Visit the Repo Here!</a>
 										</p>
 									</header>
 									<div class="content">
