Fixed issue with image crop

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/BrainFlash2.png" class="landscape"><img src="images/BrainFlash2.png" alt="" /></a>
+											<a href="images/BrainFlash2.png" class="landscape"><img src="images/BrainFlash2.png" alt="" style="height: 100%; width: 100%;"/></a>
 											<!-- <a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a> -->
 											<!-- <a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a> -->
-											<a href="images/BrainFlash.png" class="landscape"><img src="images/BrainFlash.png" alt="" /></a>
+											<a href="images/BrainFlash.png" class="landscape"><img src="images/BrainFlash.png" alt="" style="height: 100%; width: 100%;"/></a>
 										</div>
 									</div>
 								</section>
@@ -244,7 +244,7 @@
 										<div class="gallery">
 											<!-- <a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a> -->
 											<!-- <a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a> -->
-											<a href="images/StoryQuest.png" class="landscape"><img src="images/StoryQuest.png" alt="" /></a>
+											<a href="images/StoryQuest.png" class="landscape"><img src="images/StoryQuest.png" alt="" style="height: 100%; width: 100%;"/></a>
 										</div>
 									</div>
 								</section>
@@ -263,10 +263,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/Crimewatch1.png" class="landscape"><img src="images/Crimewatch1.png" alt="" /></a>
+											<a href="images/Crimewatch1.png" class="landscape"><img src="images/Crimewatch1.png" alt="" style="height: 100%; width: 100%;"/></a>
 											<!-- <a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a> -->
 											<!-- <a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a> -->
-											<a href="images/Crimewatch2.png" class="landscape"><img src="images/Crimewatch2.png" alt="" /></a>
+											<a href="images/Crimewatch2.png" class="landscape"><img src="images/Crimewatch2.png" alt="" style="height: 100%; width: 100%;"/></a>
 										</div>
 									</div>
 								</section>
