--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 										</svg>
 									</span></div>
 							</div>
-							<p>Other skills include Git, Heroku, Webpack etc... </p>
+							<p>Other skills include Git, Heroku, Mongoose, and RSpec </p>
 							<p>I love adapting to different things, and it's exciting to learn any new language should it bring itself to my work!</p>
 						</div>
 					</section>
