Updated resume and descriptions

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content" style="display:flex; justify-content:space-between;">
-							<p style="max-width:50%;"><strong>Welcome!</strong> My name is Shawki Kased and I'm a Software Engineer with a love for video games. I'm always excited to learn a new language and I love building projects to sharpen my skills. <a href="Shawki_Kased_Resume (1).pdf" target="_blank">Check out my Resume!</a></p>
+							<p style="max-width:50%;"><strong>Welcome!</strong> My name is Shawki Kased and I'm a Software Engineer with a love for video games. I'm always excited to learn a new language and I love building projects to sharpen my skills. <a href="Shawki_Kased_Resume.pdf" target="_blank">Check out my Resume!</a></p>
 							<span class="image main" style="padding-left:38px;"><img src="images/Shawki_Kased_s.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -209,7 +209,7 @@
 								<section>
 									<header>
 										<h3>BrainFlash</h3>
-										<p> Studying website inspired by Brainscape where users can create flashcards for easy access studying.
+										<p><strong>Studying website inspired by Brainscape where users can create flashcards for easy access studying.</strong>
 										Coded Active Record associations between User, Card, and Deck entities on a model level to provide easy structuring of JSON views for the backend to serve in response to HTTP requests from the frontend.
 										Implemented an onClick modal component that adds Cards and/or Decks and triggers an update state event to the index page, delivering a quick and easy flashcard maker.
 										Designed a study page that uses a hideComponent onClick function that changes the state of the viewable answer, giving the user a mental test of their material, making for easy effective studying.
@@ -232,7 +232,7 @@
 								<section>
 									<header>
 										<h3>StoryQuest</h3>
-										<p>JavaScript text adventure game based around selection boxes with multiple paths and scenarios.
+										<p><strong>JavaScript text adventure game based around selection boxes with multiple paths and scenarios.</strong>
 										Executed a game logic that creates a tree-based choice box system using tree nodes as buttons, each of which corresponds to a unique Id that shifts the story scenario.
 										Defined an array-based data structure containing the story objects that each represents a scenario with its own options and id for button tree nodes to access and trigger the population of the appropriate scenario in the DOM.
 										Built a location object of background images used with an associated story object to render the proper background for the player’s current progress.
@@ -253,7 +253,7 @@
 								<section>
 									<header>
 										<h3>CrimeWatch</h3>
-										<p>A web application that allows Samaritans to report local crimes/incidents in their neighborhood.
+										<p><strong>A web application that allows Samaritans to report local crimes/incidents in their neighborhood.</strong>
 										Constructed a check logged-in function to give the user either the login or report forms based on status.
 										Created an Incident Item component that takes the latitude, longitude, category of crime, and description inputs that are given in the Report Form and returns it properly labeled and pushed to the Incident Index object that displays the full list of reports to the front page.
 										Structured report with filler data to be used as a sample API response test on Google Map Location tracking, ensuring it works properly before implementing the report form.
